中文: Added: 新增Stream练习单元测试 Fixed: 修复sumOfEvenSquares缺少偶数过滤步骤的问题 Changed: 简化upperCaseDistinct收集为不可变列表的写法
英文:
Added: Add unit tests for Stream exercises
Fixed: Fix missing even number filtering step in sumOfEvenSquares
Changed: Simplify immutable list collection in upperCaseDistinct